--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My first webpage</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>My first webpage</title>
 </head>
 <body>
   <h1>My First Webpage</h1>
-  <h2>Written with a little guidance from Moringa School</h2>
-  <p>Hello,world!</p> 
+  <h2>Written with a little guidance from <em> Moringa School </em> </h2>
+
+  <p>Hello,world!</p>
+  <p>Welcome to my <stong> first web page!</strong></p>
+
+  <p>Here are some things I'm going to learn about coding:</p>
+  <ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>And a lot more!</li>
+  </ul>
+<p>Check out <a href="http://moringaschol.com/">Moringa School</a>.It's a great place to learn web development skills!</p>
+<p>Here is a  link to my <a href="F"avorite-things.html">favorite things</a>.</p>
+<img src="elephant.jpeg" alt="A photo of an elephant">
   </body>
 </html>
