--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,7 +5,7 @@
     <title>My first webpage</title>
 </head>
 <body>
-  <h1>My First Webpage</h1>
+  <h1>My First Webpage</hr>....<hr/></h1>
   <h2>Written with a little guidance from <em> Moringa School </em> </h2>
 
   <p>Hello,world!</p>
